Basic flask server is working

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,6 @@ envlist = py37
 skipsdist = true
 
 [testenv:py37]
-deps = -rrequirements.txt
+deps = -rrequirements-dev.txt
 envdir = venv
 commands =
