--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ venv
 .mypy_cache
 .vscode
 .env
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+__pycache__/app.cpython-37.pyc
