--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,55 @@
-flask
-plaid-python
-pre-commit
-python-dotenv
+appdirs==1.4.3
+attrs==19.3.0
+awsebcli==3.18.1
+bcrypt==3.1.7
+blessed==1.17.5
+botocore==1.15.49
+cached-property==1.5.1
+cement==2.8.2
+certifi==2020.4.5.1
+cffi==1.14.0
+cfgv==3.1.0
+chardet==3.0.4
+click==7.1.2
+colorama==0.4.3
+cryptography==2.9.2
+distlib==0.3.0
+docker==4.2.0
+docker-compose==1.25.5
+dockerpty==0.4.1
+docopt==0.6.2
+docutils==0.15.2
+filelock==3.0.12
+Flask==1.0.2
+future==0.16.0
+identify==1.4.15
+idna==2.9
+importlib-metadata==1.6.0
+itsdangerous==1.1.0
+Jinja2==2.11.2
+jmespath==0.9.5
+jsonschema==3.2.0
+MarkupSafe==1.1.1
+nodeenv==1.3.5
+paramiko==2.7.1
+pathspec==0.5.9
+plaid-python==3.9.0
+pre-commit==2.3.0
+pycparser==2.20
+PyNaCl==1.3.0
+pyrsistent==0.16.0
+python-dateutil==2.8.0
+python-dotenv==0.13.0
+PyYAML==5.3.1
+requests==2.23.0
+semantic-version==2.5.0
+six==1.11.0
+termcolor==1.1.0
+texttable==1.6.2
+toml==0.10.0
+urllib3==1.24.3
+virtualenv==20.0.20
+wcwidth==0.1.9
+websocket-client==0.57.0
+Werkzeug==1.0.1
+zipp==3.1.0
