--- a/requirements.txt
+++ b/requirements.txt
@@ -21,9 +21,10 @@ docopt==0.6.2
 docutils==0.15.2
 filelock==3.0.12
 Flask==1.0.2
+Flask-Cors==3.0.8
 future==0.16.0
 identify==1.4.15
-idna==2.9
+idna==2.7
 importlib-metadata==1.6.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -41,7 +42,7 @@ pyrsistent==0.16.0
 python-dateutil==2.8.0
 python-dotenv==0.13.0
 PyYAML==5.3.1
-requests==2.23.0
+requests==2.20.1
 semantic-version==2.5.0
 six==1.11.0
 termcolor==1.1.0
