--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ docutils==0.15.2
 filelock==3.0.12
 Flask==1.0.2
 Flask-Cors==3.0.8
+forex-python==1.5
 future==0.16.0
 identify==1.4.15
 idna==2.7
@@ -44,6 +45,7 @@ python-dotenv==0.13.0
 PyYAML==5.3.1
 requests==2.20.1
 semantic-version==2.5.0
+simplejson==3.17.0
 six==1.11.0
 termcolor==1.1.0
 texttable==1.6.2
